@@ -20,6 +20,10 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
 USA.
 */
 
+#ifndef _BSD_SOURCE
+# define _BSD_SOURCE 1
+#endif
+
 #ifndef _XOPEN_SOURCE
 # define _XOPEN_SOURCE 500
 #endif
